フォントサイズの調整

--- a/wp/sd5_base.html
+++ b/wp/sd5_base.html
@@ -50,6 +50,7 @@
       padding: 1rem 0;
       cursor: pointer;
       font-weight: bold;
+      font-size: 1.5rem;
     }
 
     .button-box:hover {
