--- a/wp/sd5_home.html
+++ b/wp/sd5_home.html
@@ -90,7 +90,7 @@
   </main>
 
   <footer>
-    <button type="button" class="btn btn-secondary" onclick="location.href='sd5_3.php'">管理者ログイン</button>
+    <button type="button" class="btn btn-secondary" onclick="location.href='sd5_login.html'">管理者ログイン</button>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
