--- a/wp/sd5_home.html
+++ b/wp/sd5_home.html
@@ -69,9 +69,46 @@
     }
 
     main {
-      margin-top: 8rem;
-      /* Adjusted for the header and button container */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       padding: 1rem;
+    }
+
+    .start-button {
+      background-color: #8b4513;
+      color: white;
+      padding: 1.5rem 3rem;
+      font-size: 1.8rem;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      display: block;
+      margin: 0 auto;
+    }
+
+    .start-button:hover {
+      background-color: chocolate;
+    }
+
+    .description-container {
+      background-color: #dcdcdc;
+      /* light grey */
+      padding: 2rem;
+      border-radius: 10px;
+      margin-bottom: 2rem;
+      display: inline-block;
+      text-align: left;
+      /* Ensure text alignment inside container */
+      width: 70%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .description {
+      font-size: 1.5rem;
     }
   </style>
 </head>
@@ -87,7 +124,13 @@
   </div>
 
   <main>
-    <!-- メインコンテンツ -->
+    <!-- Main content -->
+    <div class="description-container">
+      <div class="description">
+        このサイトでは営農計画書の作成を補助できます。様々な作物、特産物ごとにかかる肥料や種苗、労働時間等様々なコストを割り出すことで、営農計画書の作成を支援します。
+      </div>
+    </div>
+    <button class="start-button" onclick="location.href='sd5_input_form.html'">始める</button>
   </main>
 
   <footer>
