--- a/wp/sd5_home.html
+++ b/wp/sd5_home.html
@@ -130,7 +130,7 @@
         このサイトでは営農計画書の作成を補助できます。様々な作物、特産物ごとにかかる肥料や種苗、労働時間等様々なコストを割り出すことで、営農計画書の作成を支援します。
       </div>
     </div>
-    <button class="start-button" onclick="location.href='sd5_input_form.html'">始める</button>
+    <button class="start-button" onclick="location.href='sd5_input_form.php'">始める</button>
   </main>
 
   <footer>
