主にlogin.htmとcontact.htmlを編集した。

--- a/wp/sd5_login.html
+++ b/wp/sd5_login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>農業経営システム</title>
+  <title>書類作成補助システム</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -14,7 +14,7 @@
 
     header,
     footer {
-      background-color: brown;
+      background-color: #ae5123;
       color: white;
       text-align: center;
       padding: 1rem;
@@ -24,11 +24,73 @@
       position: fixed;
       width: 100%;
       top: 0;
+      z-index: 1000;
     }
 
     header h1 {
       font-size: 2rem;
-      /* h1のフォントサイズを大きく */
+    }
+
+    .button-container {
+      display: flex;
+      background-color: #8b4513;
+      color: white;
+      width: 100%;
+      position: fixed;
+      top: 4rem;
+      z-index: 900;
+    }
+
+    .button-box {
+      flex: 1;
+      text-align: center;
+      padding: 1rem 0;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 1.5rem;
+    }
+
+    .button-box:hover {
+      background-color: chocolate;
+    }
+
+    .login-container {
+      position: fixed;
+      top: 16rem;
+      left: 50%;
+      transform: translate(-50%);
+      background-color: #dcdcdc;
+      padding: 2rem;
+      text-align: left;
+      width: 80%;
+      max-width: 600px;
+      max-height: 90vh;
+      overflow-y: auto;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+    }
+
+    .login-button {
+      width: min-content;
+      background-color: #8b4513;
+      color: white;
+      padding: 0.3rem 0.8rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      display: block;
+      margin: 1rem auto 0;
+    }
+
+    .in-login-button {
+      background-color: #8b4513;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      border-radius: 5px;
+      cursor: pointer;
     }
 
     footer {
@@ -40,26 +102,51 @@
       align-items: center;
       height: 60px;
       padding-right: 20px;
-      /* 右側に少し余白 */
     }
 
     main {
-      margin: 6rem 0;
+      margin-top: 8rem;
       padding: 1rem;
+    }
+
+    .login-header {
+      position: fixed;
+      top: 13rem;
+      /* Adjusted to be just below header */
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      margin-bottom: 1rem;
+      font-size: 1.5rem;
+      z-index: 1001;
+    }
+
+    .login-container {
+      margin-top: -1rem;
     }
   </style>
 </head>
 
 <body>
   <header>
-    <h1>農業経営システム</h1>
+    <h1>書類作成補助システム</h1>
   </header>
+
+  <div class="button-container">
+    <div class="button-box" onclick="location.href='sd5_notification.html'">お知らせ</div>
+    <div class="button-box" onclick="location.href='sd5_contact.html'">問い合わせ</div>
+  </div>
+
   <main>
+    <h1 class="login-header">管理者ログイン</h1>
     <form action="#" method="post">
-      <h1>管理者ログイン</h1>
-      <p>ログインID:<br><input type="text" name="text" /></p>
-      <p>パスワード:<br><input type="email" name="email" /></p>
-      <p><input type="submit" value="送信する"></p>
+      <div class="login-container">
+        <p>ログインID:<br><input type="text" name="text" /></p>
+        <p>パスワード:<br><input type="password" name="password" /></p>
+        <p class="login-button">
+          <input class="in-login-button" type="submit" value="送信する">
+        </p>
+      </div>
     </form>
   </main>
   <footer>
@@ -71,7 +158,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
     document.querySelector('header h1').addEventListener('click', function () {
-      window.location.href = 'sd5_1.html';
+      window.location.href = 'sd5_home.html';
     });
   </script>
 </body>
