--- a/wp/sd5_contact.html
+++ b/wp/sd5_contact.html
@@ -6,122 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>書類作成補助システム</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      scrollbar-width: thin;
-    }
-
-    header,
-    footer {
-      background-color: #ae5123;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-    }
-
-    header {
-      position: fixed;
-      width: 100%;
-      top: 0;
-      z-index: 1000;
-    }
-
-    header h1 {
-      font-size: 2rem;
-    }
-
-    .button-container {
-      display: flex;
-      background-color: #8b4513;
-      color: white;
-      width: 100%;
-      position: fixed;
-      top: 4rem;
-      z-index: 900;
-    }
-
-    .button-box {
-      flex: 1;
-      text-align: center;
-      padding: 1rem 0;
-      cursor: pointer;
-      font-weight: bold;
-      font-size: 1.5rem;
-    }
-
-    .button-box:hover {
-      background-color: chocolate;
-    }
-
-    footer {
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      height: 60px;
-      padding-right: 20px;
-    }
-
-    .contact-container {
-      position: fixed;
-      top: 16rem;
-      /* Adjust for header and contact-header */
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #dcdcdc;
-      padding: 2rem;
-      text-align: left;
-      width: 80%;
-      max-width: 600px;
-      max-height: 90vh;
-      overflow-y: auto;
-      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
-    }
-
-    .contact-button {
-      width: min-content;
-      background-color: #8b4513;
-      color: white;
-      padding: 0.3rem 0.8rem;
-      font-size: 1rem;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      display: block;
-      margin: 1rem auto 0;
-    }
-
-    .in-contact-button {
-      background-color: #8b4513;
-      color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .contact-header {
-      position: fixed;
-      top: 13rem;
-      /* Adjusted to be just below header */
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
-      margin-bottom: 1rem;
-      font-size: 1.5rem;
-      z-index: 1001;
-    }
-
-    .contact-button:hover {
-      background-color: chocolate;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/input-contact.css">
 </head>
 
 <body>
@@ -135,14 +21,15 @@
   </div>
 
   <main>
-    <h1 class="contact-header">問合せフォーム</h1>
+    <h1 class="page-header">問合せフォーム</h1>
     <form action="#" method="post">
-      <div class="contact-container">
-        <div>お名前:<br><input type="text" name="text" /></div>
-        <div>メールアドレス:<br><input type="email" name="email" /></div>
-        <div>お問い合わせ内容:<br><textarea name="content" cols="30" rows="5" placeholder="問い合わせ内容を記入してください。"></textarea></div>
-        <div class="contact-button">
-          <input class="in-contact-button" type="submit" value="送信する">
+      <div class="container">
+        <div>お名前:<br><input class="field" type="text" name="text" /></div>
+        <div>メールアドレス:<br><input class="field" type="email" name="email" /></div>
+        <div>お問い合わせ内容:<br><textarea class="field" name="content" cols="30" rows="5"
+            placeholder="問い合わせ内容を記入してください。"></textarea></div>
+        <div class="send-button">
+          <input class="in-send-button" type="submit" value="送信する">
         </div>
       </div>
     </form>
