testhtmlを動くようにした

--- a/wp/test.html
+++ b/wp/test.html
@@ -24,7 +24,7 @@
       フッター部分
     </div>
   </div>
-  <script src="js/APIaccessor.js">
+  <script src="js/test.js" type="module">
   </script>
 </body>
 
