--- a/wp/sd5_admin.html
+++ b/wp/sd5_admin.html
@@ -22,8 +22,19 @@
 
   <main>
     <h1 class="page-header">管理者メニュー</h1>
+
+
     <form action="#" method="post">
       <div class="container">
+        <div>データベース追加</div>
+        <div>追加.編集</div>
+        <div>データベースが表示される予定</div>
+        <div>消去ボタン</div>
+        <div>データベースが表示される予定</div>
+        <div>消去ボタン</div>
+        <div>データベースが表示される予定</div>
+        <div>消去ボタン</div>
+        <div>アクセス履歴予定</div>
       </div>
     </form>
   </main>
