--- a/wp/sd5_admin.html
+++ b/wp/sd5_admin.html
@@ -26,7 +26,7 @@
 
     <form action="#" method="post">
       <div class="container">
-        <div>データベース追加</div>
+        <div class="db-add">データベース追加</div>
         <div>追加.編集</div>
         <div>データベースが表示される予定</div>
         <div>消去ボタン</div>
