--- a/wp/test.html
+++ b/wp/test.html
@@ -23,7 +23,7 @@
       フッター部分
     </div>
   </div>
-  <script src="js/test.js" type="module">
+  <script type="module" src="js/test.js">
   </script>
 </body>
 
