result.cssの作成、sd5_resultにwordで出力ボタンの追加

--- a/wp/sd5_result.html
+++ b/wp/sd5_result.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>スクレイピング結果</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/input_form.css">
+    <link rel="stylesheet" href="css/result.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -46,6 +46,7 @@
             </tbody>
         </table>
     </div>
+    <button type="button" class="btn btn-primary export-Word">Wordで出力</button>
     <footer>
         <button type="button" class="btn btn-secondary" onclick="location.href='sd5_login.php'">管理者ログイン</button>
     </footer>
