--- a/wp/sd5_input_form.html
+++ b/wp/sd5_input_form.html
@@ -18,7 +18,7 @@
     <div class="button-box" onclick="location.href='sd5_contact.php'">問い合わせ</div>
   </div>
   <div class="content-container">
-    <form method="POST" id="cropForm">
+    <form method="POST" id="cropForm" onsubmit="event.preventDefault(); submitCropForm();">
       <div class="record-container">
         <div class="crop-label">作物</div>
         <div class="area-label">面積</div>
@@ -26,12 +26,12 @@
       <div class="record-container">
         <select name="crop1" id="cropinput">
         </select>
-        <input type="number" name="area1" placeholder="面積">
+        <input type="number" name="area1" placeholder="面積" required>
         <span class="unit">a(アール)</span>
       </div>
       <div class="record-container labor">
         <label for="labor">労働人数：</label>
-        <input type="number" name="labor" placeholder="人数">
+        <input type="number" name="labor" placeholder="人数" required>
         <span class="unit">人</span>
       </div>
       <button type="button" class="add-button" onclick="addCropArea()">+</button>
