home.cssの作成、sd5_home.htmlの修正

--- a/wp/sd5_home.html
+++ b/wp/sd5_home.html
@@ -7,6 +7,7 @@
   <title>書類作成補助システム</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
@@ -20,13 +21,12 @@
   </div>
 
   <main>
-    <!-- Main content -->
     <div class="description-container">
       <div class="description">
         このサイトでは営農計画書の作成を補助できます。様々な作物、特産物ごとにかかる肥料や種苗、労働時間等様々なコストを割り出すことで、営農計画書の作成を支援します。
       </div>
     </div>
-    <button class="start-button" onclick="location.href='sd5_input_form.php'">始める</button>
+    <button class="start-button" onclick="location.href='sd5_input_form.html'">始める</button>
   </main>
 
   <footer>
