コンソールにエラーを出力

--- a/wp/sd5_input_form.html
+++ b/wp/sd5_input_form.html
@@ -34,7 +34,7 @@
         <input type="number" name="labor" placeholder="人数" required>
         <span class="unit">人</span>
       </div>
-      <button type="button" class="add-button">+</button>
+      <button type="button" class="add-button" onsubmit="event.addCropArea()">+</button>
       <div class="decide-button">
         <button type="submit">決定</button>
       </div>
