--- a/wp/sd5_input_form.html
+++ b/wp/sd5_input_form.html
@@ -23,6 +23,11 @@
         <div class="crop-label">作物</div>
         <div class="area-label">面積</div>
       </div>
+      <div class="record-container labor">
+        <label for="labor">労働人数：</label>
+        <input type="number" name="labor" placeholder="人数" required>
+        <span class="unit">人</span>
+      </div>
       <button type="button" class="add-button" id="add-button" onsubmit="event.addCropArea()">+</button>
       <div class="decide-button">
         <button type="submit">決定</button>
