--- a/wp/sd5_result.html
+++ b/wp/sd5_result.html
@@ -53,6 +53,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script type="module" src="./js/scrapeResult.js"></script>
 </body>
 
 </html>
