--- a/wp/sd5_home.html
+++ b/wp/sd5_home.html
@@ -7,7 +7,7 @@
   <title>書類作成補助システム</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/home.css">
+  <!-- <link rel="stylesheet" href="css/home.css"> -->
 </head>
 
 <body>
