--- a/wp/sd5_input_form.html
+++ b/wp/sd5_input_form.html
@@ -7,6 +7,7 @@
   <title>書類作成補助システム</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/input_form.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
